package main

import (
	"context"
	"fmt"
	"log/slog"
	"net"
	"os"
	"runtime"
	"strconv"
	"time"
	
	"github.com/melihxz/holocompute/internal/config"
	"github.com/melihxz/holocompute/internal/dsm"
	"github.com/melihxz/holocompute/internal/hyperbus"
	"github.com/melihxz/holocompute/internal/log"
	"github.com/melihxz/holocompute/internal/membership"
	"github.com/melihxz/holocompute/internal/scheduler"
	"github.com/melihxz/holocompute/pkg/proto"
	"github.com/spf13/cobra"
)

var (
	// Root command
	rootCmd = &cobra.Command{
		Use:   "holo",
		Short: "HoloCompute CLI",
		Long:  "A distributed memory + compute virtualization layer",
	}
	
	// Agent command
	agentCmd = &cobra.Command{
		Use:   "agent",
		Short: "Run a HoloCompute agent",
		RunE:  runAgent,
	}
	
	// Join command
	joinCmd = &cobra.Command{
		Use:   "join [address]",
		Short: "Join a HoloCompute cluster",
		Args:  cobra.ExactArgs(1),
		RunE:  runJoin,
	}
	
	// Leave command
	leaveCmd = &cobra.Command{
		Use:   "leave",
		Short: "Leave the HoloCompute cluster",
		RunE:  runLeave,
	}
	
	// Status command
	statusCmd = &cobra.Command{
		Use:   "status",
		Short: "Show cluster status",
		RunE:  runStatus,
	}
	
	// Alloc command
	allocCmd = &cobra.Command{
		Use:   "alloc",
		Short: "Allocate resources",
	}
	
	// Alloc array command
	allocArrayCmd = &cobra.Command{
		Use:   "array [length]",
		Short: "Allocate a shared array",
		Args:  cobra.ExactArgs(1),
		RunE:  runAllocArray,
	}
	
	// Run command
	runCmd = &cobra.Command{
		Use:   "run",
		Short: "Run tasks",
	}
	
	// Run script command
	runScriptCmd = &cobra.Command{
		Use:   "script [filename]",
		Short: "Run a script",
		Args:  cobra.ExactArgs(1),
		RunE:  runScript,
	}
	
	// Drain command
	drainCmd = &cobra.Command{
		Use:   "drain [node]",
		Short: "Drain a node",
		Args:  cobra.ExactArgs(1),
		RunE:  runDrain,
	}
	
	// Top command
	topCmd = &cobra.Command{
		Use:   "top",
		Short: "Show cluster topology",
		RunE:  runTop,
	}
)

// mockHandler implements the hyperbus.MessageHandler interface
type mockHandler struct{}

func (m *mockHandler) HandleMessage(ctx context.Context, conn hyperbus.Connection, stream hyperbus.Stream, data []byte) error {
	// Handle incoming messages
	return nil
}

func init() {
	// Add subcommands
	rootCmd.AddCommand(agentCmd)
	rootCmd.AddCommand(joinCmd)
	rootCmd.AddCommand(leaveCmd)
	rootCmd.AddCommand(statusCmd)
	
	// Add alloc subcommands
	allocCmd.AddCommand(allocArrayCmd)
	rootCmd.AddCommand(allocCmd)
	
	// Add run subcommands
	runCmd.AddCommand(runScriptCmd)
	rootCmd.AddCommand(runCmd)
	
	rootCmd.AddCommand(drainCmd)
	rootCmd.AddCommand(topCmd)
}

func main() {
	if err := rootCmd.Execute(); err != nil {
		fmt.Fprintln(os.Stderr, err)
		os.Exit(1)
	}
}

func runAgent(cmd *cobra.Command, args []string) error {
	fmt.Println("Running HoloCompute agent...")
	
	// Load configuration
	cfg, err := config.LoadConfig("config.yaml")
	if err != nil {
		return fmt.Errorf("failed to load config: %w", err)
	}
	
	fmt.Printf("Node ID: %s\n", cfg.Node.ID)
	fmt.Printf("Listening on: %s\n", cfg.Network.ListenAddr)
	
	// 1. Initialize the hyperbus
	fmt.Println("1. Initializing hyperbus...")
	// Create a logger
	logger := log.New(slog.LevelDebug)
	
	// Parse the listen address to get the port
	_, portStr, err := net.SplitHostPort(cfg.Network.ListenAddr)
	if err != nil {
		return fmt.Errorf("failed to parse listen address: %w", err)
	}
	
	port, err := strconv.Atoi(portStr)
	if err != nil {
		return fmt.Errorf("failed to parse port: %w", err)
	}
	
	// Create local node info
	localNode := hyperbus.NodeInfo{
		ID:      hyperbus.NodeID(cfg.Node.ID),
		Address: &net.TCPAddr{IP: net.ParseIP("127.0.0.1"), Port: port},
		
		Capabilities: &proto.NodeCapabilities{
			CpuCores:    int32(runtime.NumCPU()),
			MemoryBytes: 1024 * 1024 * 1024, // 1GB placeholder
			HasGpu:      false,
		},
	}
	
	// Create a mock handler for now
	handler := &mockHandler{}
	bus := hyperbus.New(localNode, handler, logger)
	
	// 2. Start the membership service
	fmt.Println("2. Starting membership service...")
	member := &membership.Member{
		ID:           hyperbus.NodeID(cfg.Node.ID),
		Address:      &net.TCPAddr{IP: net.ParseIP("127.0.0.1"), Port: port},
		LastSeen:     time.Now(),
		Status:       membership.Alive,
		Capabilities: &proto.NodeCapabilities{
			CpuCores:    int32(runtime.NumCPU()),
			MemoryBytes: 1024 * 1024 * 1024, // 1GB placeholder
			HasGpu:      false,
		},
	}
	
	_ = membership.NewMembership(member, logger)
	
	// 3. Initialize the memory manager
	fmt.Println("3. Initializing memory manager...")
	_ = dsm.NewMemoryManager(bus, logger)
	
	// 4. Start the task scheduler
	fmt.Println("4. Starting task scheduler...")
	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()
	
	scheduler := scheduler.NewScheduler(logger)
	scheduler.Start(ctx)
	defer scheduler.Stop()
	
	// 5. Begin accepting connections
	fmt.Println("5. Beginning to accept connections...")
	
	// Start listening on the network
	fmt.Println("Agent is running. Press Ctrl+C to stop.")
	
	// Keep the agent running for a few seconds to demonstrate it's working
	<-time.After(10 * time.Second)
	
	return nil
}

func runJoin(cmd *cobra.Command, args []string) error {
	address := args[0]
	fmt.Printf("Joining cluster at %s...\n", address)
	
	// 1. Connect to the specified address
	conn, err := net.Dial("tcp", address)
	if err != nil {
		return fmt.Errorf("failed to connect to %s: %w", address, err)
	}
	defer conn.Close()
	
	fmt.Printf("Connected to %s\n", address)
	
	// 2. Exchange node information
	// In a real implementation, we would send a handshake message with node info
	fmt.Printf("Exchanging node information with %s\n", address)
	
	// 3. Join the cluster membership
	// In a real implementation, we would send a join request to the cluster
	fmt.Printf("Sending join request to cluster\n")
	
	fmt.Println("Successfully joined cluster")
	return nil
}

func runLeave(cmd *cobra.Command, args []string) error {
	fmt.Println("Leaving cluster...")
	
	// 1. Notify other cluster members
	// In a real implementation, we would send a leave notification to cluster members
	fmt.Println("Notifying cluster members of departure")
	
	// 2. Gracefully shut down services
	// In a real implementation, we would gracefully shut down all services
	fmt.Println("Shutting down services")
	
	// 3. Close connections
	// In a real implementation, we would close all network connections
	fmt.Println("Closing connections")
	
	fmt.Println("Successfully left cluster")
	return nil
}

func runStatus(cmd *cobra.Command, args []string) error {
	fmt.Println("Showing cluster status...")
	
	// Load configuration
	cfg, err := config.LoadConfig("config.yaml")
	if err != nil {
		return fmt.Errorf("failed to load config: %w", err)
	}
	
	// 1. Connect to the local agent
	// In a real implementation, we would connect to the local agent
	fmt.Println("Connecting to local agent")
	
	// 2. Query cluster membership
	// In a real implementation, we would query the cluster membership
	fmt.Println("Querying cluster membership")
	
	// 3. Display node information and status
	// In a real implementation, we would display detailed node information
	fmt.Printf("Node ID: %s\n", cfg.Node.ID)
	fmt.Printf("Status: Active\n")
	fmt.Printf("Address: %s\n", cfg.Network.ListenAddr)
	fmt.Println("Cluster membership: 1 node (local)")
	
	return nil
}

func runAllocArray(cmd *cobra.Command, args []string) error {
	lengthStr := args[0]
	fmt.Printf("Allocating array of length %s...\n", lengthStr)
	
	// Load configuration
	cfg, err := config.LoadConfig("config.yaml")
	if err != nil {
		return fmt.Errorf("failed to load config: %w", err)
	}
	
	// 1. Parse the length
	length, err := strconv.Atoi(lengthStr)
	if err != nil {
		return fmt.Errorf("invalid length: %w", err)
	}
	
	// 2. Connect to the cluster
	// In a real implementation, we would connect to the cluster
	fmt.Println("Connecting to cluster")
	
	// 3. Allocate the shared array
	// Create local node info for hyperbus
	localNode := hyperbus.NodeInfo{
		ID:      hyperbus.NodeID(cfg.Node.ID),
		Address: &net.TCPAddr{IP: net.ParseIP("127.0.0.1"), Port: 8443}, // Use default port
		Capabilities: &proto.NodeCapabilities{
			CpuCores:    int32(runtime.NumCPU()),
			MemoryBytes: 1024 * 1024 * 1024, // 1GB placeholder
			HasGpu:      false,
		},
	}
	
	// Create a mock handler
	handler := &mockHandler{}
	logger := log.New(slog.LevelDebug)
	bus := hyperbus.New(localNode, handler, logger)
	
	// Create memory manager
	memoryManager := dsm.NewMemoryManager(bus, logger)
	
	// Create array
	ctx := context.Background()
	array, err := memoryManager.CreateArray(ctx, length)
	if err != nil {
		return fmt.Errorf("failed to create array: %w", err)
	}
	
	// 4. Return the array ID
	fmt.Printf("Successfully allocated array with ID: %s\n", array.ID)
	
	return nil
}

func runScript(cmd *cobra.Command, args []string) error {
	filename := args[0]
	fmt.Printf("Running script %s...\n", filename)
	
	// 1. Load and parse the script
	// In a real implementation, we would load and parse the script file
	fmt.Printf("Loading script file: %s\n", filename)
	
	data, err := os.ReadFile(filename)
	if err != nil {
		return fmt.Errorf("failed to read script file: %w", err)
	}
	
	fmt.Printf("Script content (%d bytes):\n%s\n", len(data), string(data))
	
	// 2. Execute the script in the cluster
	// In a real implementation, we would execute the script in the cluster
	fmt.Println("Executing script in cluster")
	
	// 3. Return results
	// In a real implementation, we would return the execution results
	fmt.Println("Script execution completed successfully")
	
	return nil
}

func runDrain(cmd *cobra.Command, args []string) error {
	node := args[0]
	fmt.Printf("Draining node %s...\n", node)
	
	// 1. Connect to the cluster
	// In a real implementation, we would connect to the cluster
	fmt.Println("Connecting to cluster")
	
	// 2. Mark the node as draining
	// In a real implementation, we would mark the node as draining in the cluster state
	fmt.Printf("Marking node %s as draining\n", node)
	
	// 3. Migrate tasks and data away from the node
	// In a real implementation, we would migrate tasks and data
	fmt.Printf("Migrating tasks and data away from node %s\n", node)
	
	// 4. Wait for completion
	// In a real implementation, we would wait for the migration to complete
	fmt.Println("Waiting for migration to complete...")
	
	fmt.Printf("Node %s successfully drained\n", node)
	return nil
}

func runTop(cmd *cobra.Command, args []string) error {
	fmt.Println("Showing cluster topology...")
	
	// Load configuration
	cfg, err := config.LoadConfig("config.yaml")
	if err != nil {
		return fmt.Errorf("failed to load config: %w", err)
	}
	
	// 1. Connect to the cluster
	// In a real implementation, we would connect to the cluster
	fmt.Println("Connecting to cluster")
	
	// 2. Query cluster topology
	// In a real implementation, we would query the cluster topology
	fmt.Println("Querying cluster topology")
	
	// 3. Display an interactive view of the cluster
	// In a real implementation, we would display an interactive view
	fmt.Println("Cluster Topology:")
	fmt.Printf("  Node ID: %s\n", cfg.Node.ID)
	fmt.Printf("  Address: %s\n", cfg.Network.ListenAddr)
	fmt.Println("  Status: Active")
	fmt.Println("  CPU Cores: ", runtime.NumCPU())
	fmt.Println("  Memory: 1GB (placeholder)")
	
	return nil
}